--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body><a>{{1}}
-    {{2}}</a>
-
-{{#each index}}
-    {{>index index=.}}
-
-{{/each}}
+<body>
+{{data}}
 </body>
 </html>
