--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,6 +5,16 @@
     <title>Titljjjjje</title>
 </head>
 <body>
-{{o}}
+<ul class="people_list">
+    {{#each o}}
+        <li>{{this}}</li>
+    {{/each}}
+</ul>
+
+<ul class="people_list">
+    {{#each p}}
+        <li>{{this}}</li>
+    {{/each}}
+</ul>
 </body>
 </html>
