able to get the single posts but wrong data type

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -7,13 +7,13 @@
 <body>
 <ul class="people_list">
     {{#each o}}
-        <li>{{this}}</li>
+        <a href="#"><li>{{this}}</li></a>
     {{/each}}
 </ul>
 
 <ul class="people_list">
     {{#each p}}
-        <li>{{this}}</li>
+        <a href="#">  <li>{{this}}</li></a>
     {{/each}}
 </ul>
 </body>
