all working but unable to use hyperlinks

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -13,7 +13,7 @@
 
 <ul class="people_list">
     {{#each p}}
-        <a href="#">  <li>{{this}}</li></a>
+        <li><a href="{{this}}"> {{this}}</li></a>
     {{/each}}
 </ul>
 </body>
