single post redirection done

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Titljjjjje</title>
 </head>
-<body><ul class="people_list">
+<body>
+
+<ul class="people_list">
     {{#each o}}
-        <a href="#"><li>{{this}}</li></a>
+        <a href="{{this}}"><li>{{this}}</li></a>
     {{/each}}
 </ul>
 
@@ -24,6 +26,8 @@
         <a href="{{this}}">  {{ this }}</a>
     {{/each}}<br>
 {{/each}}
+
+
 </p>
 </ul>
 </body>
