--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -15,6 +15,15 @@
     {{/each}}</a>
 </p>
 
+<div class="pagination_section">
+
+    <a href="?page=1&limit=1">1</a>
+    <a href="?page=2&limit=1">2</a>
+    <a href="?page=3&limit=1">3</a>
+    <a href="?page=4&limit=1">4</a>
+    <a href="?page=5&limit=1">5</a>
+
+</div>
 </p>
 </body>
 </html>
