--- a/templates/pagination_page.hbs
+++ b/templates/pagination_page.hbs
@@ -6,7 +6,9 @@
 </head>
 <body>
 <p>
+{{bb}}
 
+<p>asddasdasdas</p>
     {{#each a}}
     <a href="/posts/{{this.title}}">
         {{#each this}}  " "
@@ -14,6 +16,7 @@
         {{/each}}<br>
     {{/each}}</a>
 </p>
+
 
 <div class="pagination_section">
 
